--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <h1>RespVis Examples</h1>
 <ul>
   <li><a href="./examples/line.html">Line Chart</a></li>
-  <li><a href="./examples/point.html">Point Chart</a></li>
+  <li><a href="./examples/scatter.html">Scatter Plot</a></li>
   <li><a href="./examples/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
   <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
