--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -78,38 +78,40 @@
       import { years, averageOpens } from './data/google.js';
       import * as d3 from './libs/d3-7.6.0/d3.js'
 
+      const calcData = () => {
+        const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
+        const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
 
-      const data = {
-        title: 'Average Opening Price of Google Stock',
-        subtitle: '2004 to 2022',
-        xValues: years,
-        yValues: [averageOpens],
-        xAxis: { title: 'Year' },
-        yAxis: { title: 'Average Opening Price', subtitle: '[USD]' },
-        markerTooltips: {
-          tooltips: (_, { xValue, yValue }) =>
-            `Year: ${xValue}<br/>Average Open Price: $${d3.format('.2f')(yValue)}`,
-        },
-        markerLabels: (_, { xValue, yValue }) => `${xValue}: $${d3.format('.2s')(yValue)}`,
-      };
+        const title = mediumWidth ? 'Average Opening Price of Google Stock' : 'Google Stock Prices';
+
+        const priceTickFormat = largeWidth ? d3.format(',') : d3.format('.2s');
+        const yConfigureAxis = (axis) => axis.tickFormat(priceTickFormat);
+
+        const yearTickFormat = largeWidth ? (v) => v : (v) => `'${v.slice(-2)}`;
+        const xConfigureAxis = (axis) => axis.tickFormat(yearTickFormat);
+
+        return {
+          title,
+          subtitle: '2004 to 2022',
+          xValues: years,
+          yValues: [averageOpens],
+          xAxis: { title: 'Year', configureAxis: xConfigureAxis },
+          yAxis: { title: 'Average Opening Price', subtitle: '[USD]', configureAxis: yConfigureAxis },
+          markerTooltips: {
+            tooltips: (_, { xValue, yValue }) =>
+                    `Year: ${xValue}<br/>Average Open Price: $${d3.format('.2f')(yValue)}`,
+          },
+          markerLabels: (_, { xValue, yValue }) => `${xValue}: $${d3.format('.2s')(yValue)}`,
+        };
+      }
 
       const chart = d3
         .select('#chart')
         .append('div')
-        .datum(chartWindowLineData(data))
+        .datum(chartWindowLineData(calcData()))
         .call(chartWindowLineRender)
         .on('resize', () => {
-          const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
-          const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
-
-          data.title = mediumWidth ? 'Average Opening Price of Google Stock' : 'Google Stock Prices';
-
-          const priceTickFormat = largeWidth ? d3.format(',') : d3.format('.2s');
-          data.yAxis.configureAxis = (axis) => axis.tickFormat(priceTickFormat);
-
-          const yearTickFormat = largeWidth ? (v) => v : (v) => `'${v.slice(-2)}`;
-          data.xAxis.configureAxis = (axis) => axis.tickFormat(yearTickFormat);
-
+          const data = calcData()
           chart.datum(chartWindowLineData(data)).call(chartWindowLineRender);
         });
     </script>
