--- a/src/examples/stacked-bar.html
+++ b/src/examples/stacked-bar.html
@@ -18,8 +18,9 @@
 
       @media (max-width: 40rem) {
         .chart {
-          grid-template: auto 1fr auto / auto 1fr;
+          grid-template: auto auto 1fr auto / auto 1fr;
           grid-template-areas:
+            'header header'
             '. legend'
             'axis-left draw-area'
             '. axis-bottom';
@@ -27,6 +28,8 @@
 
         .legend .items {
           flex-direction: row;
+          justify-content: space-evenly;
+          width: 100%;
         }
 
         .axis-y .tick:nth-of-type(2n) {
@@ -49,31 +52,41 @@
       import { years, desktop, phone, tablet, platforms } from './data/desktop-phone-tablet.js';
       import * as d3 from './libs/d3-7.6.0/d3.js'
 
-      const shares = desktop.map((d, i) => [desktop[i], phone[i], tablet[i]]);
 
-      const data = {
-        categoryEntity: 'Years',
-        categories: years,
-        values: shares,
-        valuesAsRatios: true,
-        valueDomain: [0, 100],
-        subcategoryEntity: 'Platforms',
-        subcategories: platforms,
-        labels: {},
-        legend: {reverse: true},
-        tooltips: (e, { category, subcategory, value }) =>
-          `Year: ${category}<br/>Platform: ${subcategory}<br/>Market Share: ${d3.format('.2f')(
-            value
-          )}%`,
-        xAxis: {
-          title: 'Year',
-        },
-        yAxis: {
-          title: 'Market Share',
-          configureAxis: (a) => a.tickFormat((v) => `${v}%`),
-        },
-      };
+      const calcData = () => {
+        const shares = desktop.map((d, i) => [desktop[i], phone[i], tablet[i]]);
+        const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
+        const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
+        const xTickFormat = largeWidth ? (v) => v : (v) => `'${v.slice(-2)}`;
+        const title = !mediumWidth && !largeWidth ? 'M. Shares of Devices' : 'Market Shares of Endpoint Devices'
 
+        return {
+          flipped: !mediumWidth,
+          categoryEntity: 'Years',
+          categories: years,
+          values: shares,
+          valuesAsRatios: true,
+          valueDomain: [0, 100],
+          subcategoryEntity: 'Platforms',
+          subcategories: platforms,
+          labels: {},
+          legend: { reverse: true, title: mediumWidth ? 'Platforms' : '' },
+          tooltips: (e, { category, subcategory, value }) =>
+                  `Year: ${category}<br/>Platform: ${subcategory}<br/>Market Share: ${d3.format('.2f')(
+                          value
+                  )}%`,
+          xAxis: {
+            title: 'Year', configureAxis: (a) => a.tickFormat(xTickFormat)
+          },
+          yAxis: {
+            title: 'Market Share',
+            configureAxis: (a) => a.tickFormat((v) => `${v}%`),
+          },
+          title
+        };
+      }
+
+      const data = calcData()
       const chartWindow = d3
         .select('#chart')
         .append('div')
@@ -82,20 +95,14 @@
         .call(chartWindowBarStackedAutoFilterCategories(data))
         .call(chartWindowBarStackedAutoFilterSubcategories(data))
         .on('resize', function (e, d) {
-          const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
-          const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
 
-          data.flipped = !mediumWidth;
-          data.legend.title = mediumWidth ? 'Platforms' : '';
-          const xTickFormat = largeWidth ? (v) => v : (v) => `'${v.slice(-2)}`;
-          data.xAxis.configureAxis = (a) => a.tickFormat(xTickFormat);
 
           /* const legendPosition = d.flipped
               ? respVis.LegendPosition.Top
               : respVis.LegendPosition.Right;
             chart.call(chartLegendPosition, legendPosition); */
 
-          chartWindow.datum(chartWindowBarStackedData(data)).call(chartWindowBarStackedRender);
+          chartWindow.datum(chartWindowBarStackedData(calcData())).call(chartWindowBarStackedRender);
         });
     </script>
   </body>
