--- a/src/examples/scatter.html
+++ b/src/examples/scatter.html
@@ -36,39 +36,49 @@
     <div id="chart"></div>
     <script type="module">
       import { chartWindowPointData, chartWindowPointRender, rectFromString } from './libs/respvis/respvis.js';
-      import { areas, prices } from './data/houses.js';
       import * as d3 from './libs/d3-7.6.0/d3.js'
+      import {getTopMakesData, carData} from "./data/sold-cars-germany/sold-cars-germany.js";
+
+      const {topMakesNames, mileages, horsePower, prices} = getTopMakesData(5)
+      const allHorsePower = carData.map(entry => entry.hp)
+      const allPrices = carData.map(entry => entry.price)
+      const allMileages = carData.map(entry => entry.mileage)
 
       const baseScaleX = d3.scaleLinear()
-              .domain([0, Math.max(...areas)])
+              .domain([0, Math.max(...allHorsePower)])
               .nice()
       const baseScaleY = d3.scaleLinear()
-              .domain([0, Math.max(...prices)])
+              .domain([0, Math.max(...allPrices)])
               .nice()
+      const radiusScale = d3.scaleLinear()
+              .domain([0, Math.max(...allMileages)])
+              .range([5, 20])
 
       const scales = {
         xScale: baseScaleX,
-        yScale: baseScaleY
+        yScale: baseScaleY,
+        radiusScale
       }
 
       const calcData = () => {
         const mediumWidth = window.matchMedia('(min-width: 40rem)').matches;
         const largeWidth = window.matchMedia('(min-width: 60rem)').matches;
         const numberFormat = !mediumWidth ? d3.format('.2s') : d3.format(',');
-        const areasGrouped = [areas.slice(0, 10), areas.slice(10, 20), areas.slice(20)]
-        const pricesGrouped = [prices.slice(0, 10), prices.slice(10, 20), prices.slice(20)]
         return {
-          xValues: areasGrouped,
+          xValues: horsePower,
           xScale: scales.xScale,
-          yValues: pricesGrouped,
+          yValues: prices,
           yScale: scales.yScale,
-          xAxis: { title: 'Area', subtitle: '[ft²]', configureAxis: (a) => a.tickFormat(numberFormat) },
-          yAxis: { title: 'Price', subtitle: '[USD]', configureAxis: (a) => a.tickFormat(numberFormat) },
-          radiuses: !mediumWidth ? 3 : !largeWidth ? 5 : 7,
+          xAxis: { title: 'Horse Power', subtitle: '[PS]', configureAxis: (a) => a.tickFormat(numberFormat) },
+          yAxis: { title: 'Price', subtitle: '[EU]', configureAxis: (a) => a.tickFormat(numberFormat) },
+          radiuses: {
+            radiusDim: mileages,
+            scale: scales.radiusScale
+          },
           legend: {
             title: 'Legend',
-            keys: ['Group1', 'Group2', 'Group3'],
-            labels: ['Group1', 'Group2', 'Group3'],
+            keys: [...topMakesNames, "Other"],
+            labels: [...topMakesNames, "Other"]
           },
         };
       }
