--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <ul>
   <li><a href="./examples/line.html">Line Chart</a></li>
   <li><a href="./examples/scatter.html">Scatter Plot</a></li>
+  <li><a href="./examples/scatter-color-scale.html">Scatter Plot Colored</a></li>
   <li><a href="./examples/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
   <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
