--- a/src/examples/parcoord.html
+++ b/src/examples/parcoord.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-    <title>RespVis - Point Chart</title>
+    <title>RespVis - Parallel Coordinates Chart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../respvis.css" />
@@ -18,10 +18,10 @@
     </style>
 </head>
 <body>
-<h1>Scatter Plot</h1>
+<h1>Parallel Coordinates Chart</h1>
 <div id="chart"></div>
 <script type="module">
-    import { chartWindowPointData, ScatterPlot } from './libs/respvis/respvis.js';
+    import { WindowChartParcoordRenderer } from './libs/respvis/respvis.js';
     import * as d3 from './libs/d3-7.6.0/d3.js'
     import {getTopMakesData, carData} from "./data/sold-cars-germany/sold-cars-germany.js";
 
@@ -65,7 +65,7 @@
     }
 
     const chartWindow = d3.select('#chart').append('div')
-    const renderer = new ScatterPlot(chartWindow, calcData())
+    const renderer = new WindowChartParcoordRenderer(chartWindow, calcData())
     renderer.buildWindowChart()
 </script>
 </body>
