--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,26 @@
 </head>
 <body>
 <h1>RespVis Examples</h1>
+<h2>Line Charts</h2>
 <ul>
   <li><a href="./examples/line.html">Line Chart</a></li>
+  <li><a href="./examples/line-multi.html">Multi-Line Chart</a></li>
+</ul>
+<h2>Scatter Plots</h2>
+<ul>
   <li><a href="./examples/scatter.html">Scatter Plot</a></li>
   <li><a href="./examples/scatter-color-scale.html">Scatter Plot Colored</a></li>
+</ul>
+<h2>Bar Charts</h2>
+<ul>
   <li><a href="./examples/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
   <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
-  <li><a href="./examples/line-multi.html">Multi-Line Chart</a></li>
+</ul>
+<h2>Other Charts</h2>
+<ul>
   <li><a href="./examples/article/article.html">News Article</a></li>
+  <li><a href="./examples/parcoord.html">Parallel Coordinates Chart</a></li>
 </ul>
 </body>
 </html>
