--- a/src/examples/parcoord.html
+++ b/src/examples/parcoord.html
@@ -66,6 +66,8 @@
         ]
         return {
             dimensions,
+            title: "Parcoord Example Title",
+            subtitle: "Example Subtitle"
             // axes: [
             //     { title: 'Horse Power', subtitle: '[PS]', configureAxis: (a) => a.tickFormat(numberFormat) },
             //     { title: 'Price', subtitle: '[EU]', configureAxis: (a) => a.tickFormat(numberFormat) },
