--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../../respvis.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="electric-power-comsumption/electric-power-consumption.css" />
+    <link rel="stylesheet" href="./electric-power-comsumption/electric-power-consumption.css" />
     <link rel="stylesheet" href="market-shares/market-shares.css" />
     <link rel="stylesheet" href="sold-cars-germany/sold-cars-germany.css" />
   </head>
