--- a/src/examples/line-multi.html
+++ b/src/examples/line-multi.html
@@ -59,17 +59,16 @@
             .point, .axis-x .tick {
                 display: none;
             }
-            .point:nth-of-type(5n), .axis-x .tick:nth-of-type(5n) {
+            .point:nth-of-type(5n), .point:first-of-type, .point:last-of-type, .axis-x .tick:nth-of-type(5n) {
                 display: block;
             }
-
         }
 
         @media (min-width: 43.75rem) {
             .point, .axis-x .tick {
                 display: none;
             }
-            .point:nth-of-type(2n), .axis-x .tick:nth-of-type(2n) {
+            .point:nth-of-type(2n), .point:first-of-type, .point:last-of-type, .axis-x .tick:nth-of-type(2n) {
                 display: block;
             }
         }
