--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../../respvis.css" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./electric-power-comsumption/electric-power-consumption.css" />
-    <link rel="stylesheet" href="market-shares/market-shares.css" />
-    <link rel="stylesheet" href="sold-cars-germany/sold-cars-germany.css" />
+    <link rel="stylesheet" href="../charts/market-shares/market-shares.css" />
+    <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css" />
   </head>
   <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
@@ -131,7 +131,7 @@
       </div>
     </div>
 
-    <script type="module" src="market-shares/market-shares-chart.js"></script>
+    <script type="module" src="../charts/market-shares/market-shares-chart.js"></script>
     <script type="module" src="electric-power-comsumption/electric-power-consumption.js"></script>
     <script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
   </body>
