Add Container Queries for Multi Line Chart, Fix Long Waiting Times when using gulp and edit example files

--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../../respvis.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="./electric-power-comsumption/electric-power-consumption.css" />
+    <link rel="stylesheet" href="../charts/electric-power-comsumption/electric-power-consumption.css" />
     <link rel="stylesheet" href="../charts/market-shares/market-shares.css" />
     <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css" />
   </head>
@@ -132,7 +132,7 @@
     </div>
 
     <script type="module" src="../charts/market-shares/market-shares-chart.js"></script>
-    <script type="module" src="electric-power-comsumption/electric-power-consumption.js"></script>
+    <script type="module" src="../charts/electric-power-comsumption/electric-power-consumption.js"></script>
     <script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
   </body>
 </html>
